--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.16.2",
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-clean-css": "^3.9.2",
+    "gulp-cli": "^2.0.0",
     "gulp-concat": "^2.6.1",
     "gulp-nodemon": "^2.2.1",
     "gulp-rename": "^1.2.2",
