--- a/package.json
+++ b/package.json
@@ -13,18 +13,19 @@
   "author": "fpegios",
   "license": "ISC",
   "dependencies": {
-    "browser-sync": "^2.23.2",
+    "browser-sync": "^2.24.4",
     "del": "^3.0.0",
     "express": "^4.16.2",
     "gulp": "github:gulpjs/gulp#4.0",
-    "gulp-clean-css": "^3.9.2",
+    "gulp-clean-css": "^3.9.4",
     "gulp-cli": "^2.0.0",
     "gulp-concat": "^2.6.1",
     "gulp-htmlmin": "^4.0.0",
     "gulp-nodemon": "^2.2.1",
-    "gulp-rename": "^1.2.2",
-    "gulp-sass": "^3.1.0",
+    "gulp-rename": "^1.2.3",
+    "gulp-sass": "^3.2.1",
     "gulp-sass-bulk-import": "^1.0.1",
-    "gulp-uglify": "^3.0.0"
+    "gulp-uglify": "^3.0.0",
+    "node-sass": "^4.8.3"
   }
 }
